--- a/css/style.css
+++ b/css/style.css
@@ -78,7 +78,7 @@ main {
 .control-table {
   width: 600px;
   height: 200px;
-  background: linear-gradient(180deg, #000000 0%, rgba(196, 196, 196, 0) 70%);
+  background: linear-gradient(#000000 0%, transparent 70%);
   border-radius: 100px;
   box-shadow: 0 -5px 5px rgb(0 0 0/30%);
   display: flex;
@@ -112,7 +112,6 @@ main {
   transform: rotate3d(1, 0, 0, 180deg);
   transform-style: preserve-3d;
   background: linear-gradient(#2f0606, #1c1212);
-  backface-visibility: hidden;
 }
 .mark-rival::before {
   content: "";
@@ -139,6 +138,7 @@ main {
 .mark img {
   height: 100%;
   object-fit: contain;
+  transition: 0.5s;
 }
 .score {
   display: inline-block;
@@ -273,7 +273,7 @@ main {
 @media (hover: hover) {
   .control-table .mark:hover {
     transform: scale(0.95);
-    cursor: url("../img/pointer.png"), pointer;
+    cursor: url("../img/cursor.png"), pointer;
   }
 
   .btn:not(.popup .btn):hover {
