--- a/css/style.css
+++ b/css/style.css
@@ -126,14 +126,8 @@ main {
   z-index: -10;
   transform: rotateY(180deg);
 }
-.mark-rival::after {
-  content: "";
-  position: absolute;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
-  border-radius: 100%;
+.mark-rival img {
+  opacity: 0;
 }
 .mark img {
   height: 100%;
@@ -193,7 +187,7 @@ main {
   border-radius: 100px;
   min-width: 150px;
   text-align: center;
-  box-shadow: 0 0px 15px rgb(0 0 0 / 40%);
+  box-shadow: 0 4px 4px rgb(0 0 0 / 40%);
   border: none;
   transition: 0.3s;
 }
